# fastbit-test

./: .gitmodules  CMakeLists.txt  adios_meta.cpp  fastbit_build_index.cpp  fastbit_query.cpp  generate_data.cpp  setup_fastbit_lib.sh  setup_openmpi_lib.sh
